tup/parse/testdata/error/review/assignments.tup
# missing right-hand side
answer =

error: expecting "expression", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:9

# unclosed labeled destructuring
(name, age = (name: "Brent", age: 42)

error: expecting ")", got "="
--> /home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:12

# missing expression after mut
coords = mut

error: expecting "expression", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:13
